# otp

./: .gitignore  LICENSE  README.md  link_otp_to_localbin.sh  otp  pyproject.toml
otp_manager/: cli.py  crypto.py  storage.py
